# gcp-demo-pipeline

./: .dockerignore  .gitignore  Makefile  README.md  learnings.md
.claude/: settings.json
.github/workflows/: extraction-cd.yml  extraction-ci.yml  gitleaks.yml  terraform-ci.yml
docs/: 2026-06-04-lol-bigquery-pipeline-design.md  ADR-0001-bigquery-pipeline-design.md  ADR-0002-terraform-single-root-design.md  architecture.drawio
docs/superpowers/plans/: 2026-06-05-terraform-single-root-refactor.md
docs/superpowers/specs/: 2026-06-04-lol-bigquery-pipeline-design.md  2026-06-06-nest-terraform-leaf-modules-design.md
etl/extraction/: Dockerfile  pyproject.toml
etl/transformation/: pyproject.toml
etl/transformation/dbt_project/: dbt_project.yml
extraction/: Dockerfile  pyproject.toml
extraction/league_of_legends/matches/: main.py
extraction/league_of_legends/matches/test/: test_ingestor.py  test_producer.py
ingestor/: pyproject.toml
ingestor/league_of_legends/matches/: ingestor.py  main.py  producer.py
terraform/: .tflint.hcl
terraform/environments/prod/: .terraform.lock.hcl  apis.tf  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
terraform/modules/bigquery_datasets/: README.md  main.tf  outputs.tf
terraform/modules/budget/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cicd/: README.md  artifact_registry.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/cloudrun_job/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/extraction/: README.md  extractor.tf  main.tf  (+4 more)
(+45 files in other folders)
