[project]
name = "extraction"
version = "0.1.0"
description = "Riot Games League of Legends match extractor — runs as a Cloud Run Job, publishes matches to Pub/Sub."
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-pubsub>=2.39.0",
    "requests>=2.34.2",
]
