[project]
name = "extraction"
version = "0.1.0"
description = "Riot Games League of Legends match extractor — runs as a Cloud Run Job, publishes matches to Pub/Sub."
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-pubsub>=2.39.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# Modules are imported as namespace packages rooted at the repo root
# (e.g. extraction.league_of_legends.matches.ingestor), so put the repo
# root — the parent of this extraction/ dir — on sys.path.
pythonpath = [".."]
testpaths = ["league_of_legends/matches/test"]
